# ai-postex

./: ai-postex.cna  readme.md
credentialFinder/postex/postex/: ai_model.h  ai_util.cpp  ai_util.h  postexmain.cpp  rust.h
credentialFinder/postex/rust-addons/: Cargo.toml
credentialFinder/postex/rust-addons/src/: lib.rs
credentialFinder/util/: readme.md
credentialFinder/util/data_generation/: dataset_generator.py
credentialFinder/util/redux_deeppass/pytorch/: export_to_onnx.py  my_tokenize.py  pytorch_deeppass.py  pytorch_results.txt  readme.md  requirements.txt  test_onnx.py
helpers/bin2smol/: bin2smol.cxx
process_stats/: aggregate_performance.txt
semanticSearch/intelligence/: intelligence_debug.h  intelligence_main.cpp  intelligence_utils.cpp  rust.h
semanticSearch/rust_addons/: Cargo.toml  rust-toolchain.toml
semanticSearch/rust_addons/src/: lib.rs
semanticSearch/scripts/: bin2coff.py  model_testing.py  model_to_onnx.py  performance_monitor.py
